--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.27",
     "mongodb": "^3.3.1",
     "mongoose": "^5.6.11",
     "passport": "^0.4.0",
